ocfl-java-itest/src/test/resources/invalid-repos/bad-logical-paths/925/0b9/912/9250b9912ee91d6b46e23299459ecd6eb8154451d62558a3a0a708a77926ad04/v7/inventory.json.sha512
bf4a57bfc584d9f6b2d110cf1000914b37cd30946f910548fd86d2d8c751c7fdac2bcde09eaee4cc717e3f8d563f5b899d527719b0f6795b6c7aa3fe0acdf0fd	inventory.json